added the weekly update section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<a class="nav-link" href="#meet-the-team">Our Team</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">The Haps</a>
+						<a class="nav-link" href="#weekly-updates">The Haps</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#requirements">Requirements</a>
@@ -105,7 +105,7 @@
 			<div class="col-md-4 profile">
 				<p class="center-text profile-name">Jordan Samuels</p>
 				<!-- profile picture will go here -->
-				<p class="center-text profile-blurb"></p>
+				<p class="center-text profile-blurb">Graduating Senior in Computer Science with a focus in Computer Networking. Currently, certified as an entry level network technician. Previous experiences I've had  would be developing scripts for cyber security monitoring. Have had some experience working with REST API's for security products such as Splunk and NS1. Languages worked in the most would be Python, Powershell, and Java.</p>
 			</div>
 			<div class="col-md-4 profile">
 				<p class="center-text profile-name">Jacob Pawlak</p>
@@ -115,6 +115,40 @@
 			<div class="col-md-2"></div>
 
 		</div>
+
+		&nbsp;
+		&nbsp;
+
+		<div class="row" id="weekly-updates">
+
+			<div class="col-md-12 center-text">
+				<h2>Weekly Updates</h2>
+			</div>
+
+                </div>
+
+		&nbsp;
+		&nbsp;
+
+		<!-- Weekly Updates are here -->
+
+		<div class="row">
+
+			<div class="col-md-2"></div>
+
+			<div class="col-md-8">
+				<div class="update">
+					<p class="center-text update-header">Sunday February 11th, 2018</p>
+					<p class="update-body"></p>
+				</div>
+			</div>
+
+			<div class="col-md-2"></div>
+
+		</div>
+
+		&nbsp;
+		&nbsp;
 
 		<!-- Requirements will be put here? -->
 
@@ -128,12 +162,15 @@
 
 		</div>
 
+		&nbsp;
+		&nbsp;
+
 		<div class="row">
 
 			<div class="col-md-2"></div>
                         <div class="col-md-8">
 				<p>Our project will require us to implement various features to create a cohesive and effective whole. Our priorities for this project are ordered from greatest to least priority below.</p>
-                                &nbsp;
+			
 				<ol>
 					<li>Chat Bot <br>
 						<ul>
