Added Jordan's update link

--- a/index.html
+++ b/index.html
@@ -134,12 +134,31 @@
 
 		<div class="row">
 
+			<div class="col-md-12"><p class="center-text update-header">Individual Updates</p></div>
+
+		</div>
+
+		<div class="row">
+
+			<div class="col-md-2"></div>
+
+			<div class="col-md-2"><p class="update-body center-text"><a href="http://cs.uky.edu/~jcpa229/Updates/updates" >JacobPawlak</a></p></div>
+			<div class="col-md-2"><p class="update-body center-text"><a href="http://cs.uky.edu/~jico224/WeeklyUpdate" >Isaac Cook</a></p></div>
+			<div class="col-md-2"><p class="update-body center-text"><a href="http://cs.uky.edu/~jmsa242/updates.html" >Jordan Samuels</a></p></div>
+			<div class="col-md-2"><p class="update-body center-text"><a href="http://cs.uky.edu/~ammu237/weekly/updates" >Aaron Mueller</a></p></div>
+
+			<div class="col-md-2"></div>
+
+		</div>
+
+		<div class="row">
+
 			<div class="col-md-2"></div>
 
 			<div class="col-md-8">
 				<div class="update">
-					<p class="center-text update-header">Sunday February 11th, 2018</p>
-					<p class="update-body"></p>
+					<p class="center-text update-header" style="font-weight: bold">Sunday February 11th, 2018</p>
+					<p class="update-body">On Wednesday we were able to meet with our customer, Tata Consultancy Service to discuss our ideas and work out the requirements for the project. We created our website and added content to it, and we all cloned the git repositories for the website and the project onto our machines. </p>
 				</div>
 			</div>
 
