Added size and effort estimates

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 			<div class="col-md-4 profile">
 				<p class="center-text profile-name">Isaac Cook</p>
 				<!-- profile picture will go here -->
-				<p class="center-text profile-blurb">I am a senior in Computer Engineering and the president of the UK Snowcats. In my free time I enjoy rock climbing in the Red River Gorge.</p>
+				<p class="center-text profile-blurb">I am a senior in Computer Engineering and President of the UK Snowcats. My main interest is processor design and verification, as well as assembler and compiler optimization techniques. Besides academics I enjoy hiking and rock climbing in the Red River Gorge.</p>
 			</div>
 			<div class="col-md-4 profile">
 				<p class="center-text profile-name">Aaron Mueller</p>
@@ -238,6 +238,35 @@
                         </div>
                         <div class="col-md-2"></div>
 
+		</div>
+		
+		&nbsp;
+		&nbsp;
+
+		<!-- Effort and Size -->
+
+		<div class="row" id="Effort and Size">
+
+		  <div class="col-md-12 center-text">
+		    <h2>Effort and Size</h2>
+		  </div>
+		  <div class="col-md-12"></div>
+
+
+		</div>
+
+		&nbsp;
+		&nbsp;
+
+		<div class="row">
+
+		  <div class="col-md-2"></div>
+		  <div class="col-md-8">
+		    <p>Effort: The effort from each individual on this project should be continuous. We beleive that this can be easily done in the span of the semester whilst adhering to our customer's requests. We have a couple of different aspects, being the chat bot itself, the database, and the web interface for the chat bot. Most effort will be placed on the chat bot, since it will require the most intensive due to the machine learning aspect.
+
+		      Total Size: The estimated lines for the chat bot is around 2500 lines. For the web server we estimate around 2000 lines.</p>
+		  </div>
+		  <div class="col-md-2"></div>
 		</div>
 
 	</body>
