--- a/index.html
+++ b/index.html
@@ -234,6 +234,27 @@
 							</li>
 						</ul>
 					</li>
+					<li>If we can complete all of the above tasks, we will attempt to improve the chat bot and website in the following ways: <br>
+                                                <ul>
+                                                        <li>Localized extensible chat bot functionality <br>
+                                                                <ul>
+                                                                        <li>Not all warehouses will store the same information, so we need to allow different warehouses to make different types of queries and make the chat bot disregard irrelevant types of queries.</li>
+                                                                </ul>
+                                                        </li>
+                                                        <li>Online machine learning <br>
+                                                                <ul>
+                                                                        <li>Continue training chat bot based on the input received after the chat bot is deployed.</li>
+                                                                        <li>Allows the system to continuously self-improve.</li>
+                                                                </ul>
+                                                        </li>
+                                                        <li>Integrate the chat bot and website with TCS's specially designed warehouse drones <br>
+                                                                <ul>
+                                                                        <li>Allow all these technologies to continuously work in tandem and share information such that these systems may be constantly aware of the state of the other.</li>
+									<li>Would allow many useful features, including commanding the drones from the chat bot and updating database information in real-time according to user requests.</li>
+                                                                </ul>
+                                                        </li>
+                                                </ul>
+                                        </li>
 				</ol>
                         </div>
                         <div class="col-md-2"></div>
@@ -245,7 +266,7 @@
 
 		<!-- Effort and Size -->
 
-		<div class="row" id="Effort and Size">
+		<div class="row" id="Effort-And-Size">
 
 		  <div class="col-md-12 center-text">
 		    <h2>Effort and Size</h2>
@@ -262,12 +283,112 @@
 
 		  <div class="col-md-2"></div>
 		  <div class="col-md-8">
-		    <p>Effort: The effort from each individual on this project should be continuous. We beleive that this can be easily done in the span of the semester whilst adhering to our customer's requests. We have a couple of different aspects, being the chat bot itself, the database, and the web interface for the chat bot. Most effort will be placed on the chat bot, since it will require the most intensive due to the machine learning aspect.
-
-		      Total Size: The estimated lines for the chat bot is around 2500 lines. For the web server we estimate around 2000 lines.</p>
+		    <p>Effort: The effort from each individual on this project should be continuous. We beleive that this can be easily done in the span of the semester whilst adhering to our customer's requests. We have a couple of different aspects, being the chat bot itself, the database, and the web interface for the chat bot. Most effort will be placed on the chat bot, since it will require the most intensive due to the machine learning aspect. <br>
+			Total Size: The estimated lines for the chat bot is around 2500 lines. For the web server we estimate around 2000 lines.</p>
 		  </div>
 		  <div class="col-md-2"></div>
 		</div>
+
+		&nbsp;
+                &nbsp;
+
+		<div class="row" id="Schedule-And-Milestones">
+
+                  <div class="col-md-12 center-text">
+                    <h2>Schedule and Milestones</h2>
+                  </div>
+
+                </div>
+
+                &nbsp;
+                &nbsp;
+
+                <div class="row">
+
+                  <div class="col-md-2"></div>
+                  <div class="col-md-8">
+                    <iframe src="https://calendar.google.com/calendar/embed?src=g.uky.edu_atr6oocro6l1n5ab3lsikevv20%40group.calendar.google.com&ctz=America%2FNew_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+                  </div>
+                  <div class="col-md-2"></div>
+
+                </div>
+
+		&nbsp;
+                &nbsp;
+
+		<div class="row" id="Platforms-Tools-Languages">
+
+                  <div class="col-md-12 center-text">
+                    <h2>Platforms, Tools, Languages</h2>
+                  </div>
+
+                </div>
+
+                &nbsp;
+                &nbsp;
+
+                <div class="row">
+
+                  <div class="col-md-2"></div>
+                  <div class="col-md-8">
+                    <p>Our final product will be a website whose server hosts our chat bot. We will be interfacing with databases in designing both of these. As such, we will be using the following tools and languages in our project:</p>
+			<ul>
+				<li>Python <br>
+					<ul>
+						<li>For our chat bot functionality and machine learning</li>
+					</ul>
+				</li>
+				<li>Tata Consultancy Service (TCS)'s drones <br>
+                                        <ul>
+                                                <li>To collect information for our databases</li>
+						<li>Already designed and implemented by TCS</li>
+						<li>We will be using these to test our project</li>
+                                        </ul>
+                                </li>
+				<li>MySQL <br>
+                                        <ul>
+                                                <li>To interface with our databases as populated by our customer's warehouse drone technology</li>
+						<li>We will be using MySQL Connector, a Python driver that allows us to interface between Python and MySQL</li>
+                                        </ul>
+                                </li>
+				<li>HTML/CSS/Javascript <br>
+                                        <ul>
+                                                <li>To design our website and its functionality</li>
+                                        </ul>
+                                </li>
+			</ul>
+
+			<p>We will also be using and testing for the following platforms:</p>
+                        <ul>
+                                <li>University of Kentucky Computer Scoence Department's MultiLab <br>
+                                        <ul>
+                                                <li>So that we can host our site for free until we find a dedicated host</li>
+                                        </ul>
+                                </li>
+                                <li>Desktops (all operating systems) <br>
+                                        <ul>
+                                                <li>We will be using our various desktop systems to design and initially test the project</li>
+                                        </ul>
+                                </li>
+                                <li>Mobile (Android, iOS, and Windows) <br>
+                                        <ul>
+                                                <li>The site should be responsive and the chat bot should be usable on smaller devices</li>
+                                        </ul>
+                                </li>
+                                <li>Tablets <br>
+                                        <ul>
+                                                <li>Most likely type of computer used in warehouses; very important that the site functions properly on tablets</li>
+                                        </ul>
+                                </li>
+                        </ul>
+
+                  </div>
+                  <div class="col-md-2"></div>
+                </div>
+
+		&nbsp;
+		&nbsp;
+
 
 	</body>
 
