--- a/index.html
+++ b/index.html
@@ -169,6 +169,24 @@
 		&nbsp;
 		&nbsp;
 
+		<div class="row">
+
+                        <div class="col-md-2"></div>
+
+                        <div class="col-md-8">
+                                <div class="update">
+                                        <p class="center-text update-header" style="font-weight: bold">Sunday February 25, 2018</p>
+                                        <p class="update-body">This week, our group began working with the Alexa API; this will allow us to easily implement speech-to-text features as outlined in our chat bot requirements. We will need to decide how to integrate machine learning into our system to allow us to generalize from a few sample sentence-intention pairs (i.e., pairings of natural-language queries from the user to database queries) to any possible sentence. For now, however, a completely deterministic system with manually specified sentence-intention pairs will do for the purpose of testing the accuracy of the chat bot's returned items given an intention.</p>
+                                </div>
+                        </div>
+
+                        <div class="col-md-2"></div>
+
+                </div>
+
+                &nbsp;
+                &nbsp;
+
 		<!-- Requirements will be put here? -->
 
 		<div class="row" id="requirements">
