added this weeks update

--- a/index.html
+++ b/index.html
@@ -187,6 +187,25 @@
                 &nbsp;
                 &nbsp;
 
+		<div class="row">
+
+                        <div class="col-md-2"></div>
+
+                        <div class="col-md-8">
+                                <div class="update">
+                                        <p class="center-text update-header" style="font-weight: bold">Sunday March 4th, 2018</p>
+                                        <p class="update-body">This week our team met to work on our presentation for class. On tuesday we came together at the library and made our slide deck, and on Wednesday we had our scheduled meeting at Presentation U. We practiced our presentation and took some helpful notes about our slide deck, we will likely go back this coming week before our presentation for the class on Firday. As of Sunday we still have not recieved our sample utterences from our customer.</p>
+                                </div>
+                        </div>
+
+                        <div class="col-md-2"></div>
+
+                </div>
+
+                &nbsp;
+                &nbsp;
+
+
 		<!-- Requirements will be put here? -->
 
 		<div class="row" id="requirements">
