--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
 					<li class="nav-item">
 						<a class="nav-link" href="#requirements">Requirements</a>
 					</li>
+					<li class="nav-item">
+                                                <a class="nav-link" href="design.html">Design</a>
+                                        </li>
+					<li class="nav-item">
+                                                <a class="nav-link" href="screens.html">Screens</a>
+                                        </li>
+					<li class="nav-item">
+                                                <a class="nav-link" href="https://cs.uky.edu/~ammu237/CS499s18p04Website/scenario.html">User Scenarios</a>
+                                        </li>
 				</ul>
 				<form class="form-inline my-2 my-lg-0">
 					<input class="form-control mr-sm-2" type="text" placeholder="Search">
