Added the testing link

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
                                                 <a class="nav-link" href="screens.html">Screens</a>
                                         </li>
 					<li class="nav-item">
+						<a class="nav-link" href="https://cs.uky.edu/~ammu237/CS499s18p04Website/testing.html">Testing</a>						
+					</li>
+					<li class="nav-item">
                                                 <a class="nav-link" href="https://cs.uky.edu/~ammu237/CS499s18p04Website/scenario.html">User Scenarios</a>
                                         </li>
 				</ul>
@@ -204,6 +207,42 @@
                                 <div class="update">
                                         <p class="center-text update-header" style="font-weight: bold">Sunday March 4th, 2018</p>
                                         <p class="update-body">This week our team met to work on our presentation for class. On tuesday we came together at the library and made our slide deck, and on Wednesday we had our scheduled meeting at Presentation U. We practiced our presentation and took some helpful notes about our slide deck, we will likely go back this coming week before our presentation for the class on Firday. As of Sunday we still have not recieved our sample utterences from our customer.</p>
+                                </div>
+                        </div>
+
+                        <div class="col-md-2"></div>
+
+                </div>
+
+                &nbsp;
+                &nbsp;
+
+		<div class="row">
+
+                        <div class="col-md-2"></div>
+
+                        <div class="col-md-8">
+                                <div class="update">
+                                        <p class="center-text update-header" style="font-weight: bold">Sunday March 11th, 2018</p>
+                                        <p class="update-body"></p>
+                                </div>
+                        </div>
+
+                        <div class="col-md-2"></div>
+
+                </div>
+
+                &nbsp;
+                &nbsp;
+
+		<div class="row">
+
+                        <div class="col-md-2"></div>
+
+                        <div class="col-md-8">
+                                <div class="update">
+                                        <p class="center-text update-header" style="font-weight: bold">Sunday March 18th, 2018</p>
+                                        <p class="update-body"></p>
                                 </div>
                         </div>
 
