--- a/signIn.html
+++ b/signIn.html
@@ -14,6 +14,21 @@
     <link href="CSS/signin.css" rel="stylesheet">
 
     <?php
+       <!-- connect to accounts datadase -->
+       $servrname = "accounts.cpd50ukl3swz.us-east-2.rds.amazonaws.com";
+       $username = "Icook";
+       $password = "10994467";
+
+       <!-- create the connection -->
+       $conn = new mysqli($servername, $username, $password);
+
+       if ($conn->connect_error){
+    die("Connection failed: " . $conn->connect_error);
+    }
+    echo "Connected successfully.";
+    ?>
+    
+    <?php
        if ($_SERVER['REQUEST_METHOD'] == 'POST')
        {
        require 'login.php';
