--- a/design.html
+++ b/design.html
@@ -89,7 +89,17 @@
 			</div>
                   <div class="col-md-2"></div>
                 </div>
-		
+		 <div class="row" id="introduction">
+      		<div class="col-md-12">
+      		</div>
+   	 	<center><div class="col-md-12">
+  		<h4>Designs Considerations/Implementation Issues</h4>
+        	<div class="col-md-2"></div>
+        	<div class="col-md-8">
+          		<p>Problems we endured during the implementation of our project were trying trying to find and get acquainted with an ai kit that worked best with programming intents and looking at test utterances. Limitations that we faced were database connection and working with php. We struggled at first getting our web interface connected to our Amazon Web Services MySQL database. After we finally established connections we dealt with latency issues when loading the website especially with multiple users. Using AWS free tier of service also put a restriction on the amount of data we could test with and our amount of connections. Another issue we ran into was linking other additional APIs into our web interface query page. We were able to get our web interface set up as a single entity and the chatbot set up as a single entity. Going forward the implementation of the chatbot in the web interface needs to be finished. Due to the time constraints, we were not able to implement the adaptive cards with the chatbot and web interface as we first wanted to in the beginning. This can also be a future addition for groups who pick this up later. </p>
+       	 	</div>
+        	<div class="col-md-2"></div>
+      		</div></center>
 
 	</body>
 
